crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__cockpit_unread_count.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0
 ¤ 2 (1)
 ────────────────────────────────────
 ? 0   ! 1   ⏸︎ 0   ✓ 0      ⢿ 1   ○ 0

▏⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄▕
▌! claude                            ▐
▌  db migrate                        ▐
▌  ▢ ──────────────────────────    0%▐

 ⑂ feature-migration
 ⣾ codex · 258k
   add tests
   ▢ ──────────────────────────    0%



                           ? for help
