crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__degraded_banner.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
assertion_line: 103
expression: screen
---
 ⌘ query-engine

 ◎ 0
 ¤ 0
 ──────────────────────────────────────────────────────────────────────────────












 ⚠ Sidebar degraded for <elapsed>: snapshot failed: ledger not found
