crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__delegation_bands_history.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0                                  ◇ 0 ↘ 0 ↗ 0 ◌ 0
 ¤ 1                                            $0.00
 ────────────────────────────────────────────────────
 ? 0   ! 0   ⏸︎ 0   ✓ 0                ⢿ 1   ☾ 0   ○ 0

▎⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄🮇
▌⢄ claude                                            ▐
▌  delegate                                          ▐
▌  ▢ ──────────────────────────────────────────    0%▐
▌  ▤ 0                                               ▐
▌  ⧉ subagents (9) · ⧖ waits (1)                     ▐
▌    ⣾ task-1                                        ▐
▌                                                 21m▐
▌    ⣾ task-4                                        ▐
▌                                                 21m▐
▌    ✓ task-2                                     20m▐
▌    ✓ task-7                                     18m▐
▌    ✓ task-0                                     16m▐
▌    ✓ task-8                                     14m▐
▌    ✓ task-5                                     11m▐
▌    ⌁ signal · deploy.done                     ◔ <1m▐
▌    ✓ task-3                                      8m▐
▌    ✓ task-6                                      1m▐














 ────────────────────────────────────────────────────
  W: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0                       $0.00
  M: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0                       $0.00

                                           ? for help
