crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__delegation_bands_unselected.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0                                  ◇ 0 ↘ 0 ↗ 0 ◌ 0
 ¤ 1                                            $0.00
 ────────────────────────────────────────────────────
 ? 0   ! 0   ⏸︎ 0   ✓ 0                ⢿ 1   ☾ 0   ○ 0

 ⑂ main
 ⢄ claude
   delegate
   ▢ ──────────────────────────────────────────    0%
   ▤ 0
   ⧉ subagents (9) · ⧖ waits (1)


























 ────────────────────────────────────────────────────
  W: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0                       $0.00
  M: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0                       $0.00

                                           ? for help
