crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__enriched_selected_agent_card.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0
 ¤ 1
 ────────────────────────────────────────────────────
 ? 0   ! 0   ⏸︎ 0   ✓ 0                      ⢿ 1   ○ 0

▏⑂ feature-migration ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄ ⇡3 ⇣1  +127 -43
▌⣾ claude · Opus 4.8 · xhigh · 200k             $1.27
▌  ledger refactor                          ●●●○○ 3/5
▌  ▣ ━━━━━━━━━━━━━━╸━────────────────────────── 38.2%
▌  ▤ 76k · ◌ 68k ◍ 6k ↘ 1k ↗ 2k

                                           ? for help
